fix: solve the misalignment issue

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -17,6 +17,19 @@
   font-size: 14px;
   color: var(--el-table-text-color);
 
+  @include e(inner-wrapper) {
+    position: relative;
+    // 表格底部伪 border，总是有的
+    &::before {
+      @include extend-rule(border-pseudo);
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      z-index: 3;
+    }
+  }
+
   // when data is empty
   @include e(empty-block) {
     min-height: 60px;
@@ -100,7 +113,7 @@
 
   @include m(scrollable-y) {
     .#{$namespace}-table__body-wrapper {
-      overflow-y: auto;
+      overflow-y: scroll;
     }
   }
 
@@ -240,7 +253,17 @@
 
   // 拥有多级表头
   @include m((group, border)) {
-    border: var(--el-table-border);
+    @include e((inner-wrapper, footer-wrapper)) {
+      border-top: var(--el-table-border);
+      tr:first-child {
+        td,
+        th {
+          &:first-child {
+            border-left: var(--el-table-border);
+          }
+        }
+      }
+    }
 
     @include share-rule(border-pseudo) {
       content: '';
@@ -248,31 +271,45 @@
       background-color: var(--el-table-border-color);
       z-index: 1;
     }
-
-    // 表格右部伪 border
-    &::after {
-      @include extend-rule(border-pseudo);
-      top: 0;
-      right: 0;
-      width: 1px;
-      height: 100%;
-    }
-  }
-
-  // 表格底部伪 border，总是有的
-  &::before {
-    @include extend-rule(border-pseudo);
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 1px;
-    z-index: 3;
   }
 
   // table--border
   @include m(border) {
-    border-right: none;
-    border-bottom: none;
+    &::before {
+      @include extend-rule(border-pseudo);
+      top: -1px;
+      left: 0;
+      width: 1px;
+      height: 100%;
+      z-index: 3;
+    }
+
+    &::after {
+      @include extend-rule(border-pseudo);
+      top: -1px;
+      right: 0;
+      width: 1px;
+      height: 100%;
+      z-index: 3;
+    }
+
+    @include e(inner-wrapper) {
+      border-right: none;
+      border-bottom: none;
+    }
+
+    @include e(footer-wrapper) {
+      position: relative;
+    }
+
+    @include e(footer-wrapper) {
+      margin-top: -2px;
+      td.#{$namespace}-table__cell {
+        &.last {
+          border-right: none;
+        }
+      }
+    }
 
     // fix: #1013
     // &.#{$namespace}-loading-parent--relative {
@@ -281,7 +318,6 @@
 
     .#{$namespace}-table__cell {
       border-right: var(--el-table-border);
-
       &:first-child .cell {
         padding-left: 10px;
       }
@@ -338,14 +374,13 @@
             }
           }
         }
+        &.#{$namespace}-table__fixed-right-patch {
+          position: sticky !important;
+          z-index: 2;
+          background: #fff;
+          right: 0;
+        }
       }
-    }
-  }
-
-  @include e(footer-wrapper) {
-    margin-top: -1px;
-    td.#{$namespace}-table__cell {
-      border-top: var(--el-table-border);
     }
   }
 
@@ -510,6 +545,34 @@
       vertical-align: middle;
       transform: scale(0.75);
     }
+  }
+
+  @include e(border-left-patch) {
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    z-index: 3;
+    position: absolute;
+    background-color: var(--el-table-border-color);
+  }
+
+  @include e(border-bottom-patch) {
+    left: 0;
+    width: 100%;
+    height: 1px;
+    z-index: 3;
+    position: absolute;
+    background-color: var(--el-table-border-color);
+  }
+
+  @include e(border-right-patch) {
+    top: 0;
+    height: 100%;
+    width: 1px;
+    z-index: 3;
+    position: absolute;
+    background-color: var(--el-table-border-color);
   }
 
   @include m(enable-row-transition) {
